changed some styling

--- a/index.html
+++ b/index.html
@@ -211,6 +211,42 @@ h5{
   font-size: 40px !important;
 }
 
+.call-to-action.text-white.text-center{
+  background-image: linear-gradient(rgb(136, 9, 104), rgb(61, 5, 87)) !important;
+  color: #fff;
+}
+
+h2.mb-4{
+  font-size: 30px;
+}
+
+.row.no-gutters2{
+  width: 1000px;
+  margin-right: 33.3%;
+}
+
+p.lead.mb-03{
+width: 100%;
+}
+
+.bacon{
+  font-size: 25px;
+  margin-bottom: 5%;
+}
+
+.showcase .showcase-text {
+    padding: 1rem !important;
+}
+
+.mb-7{
+  font-size: 45px;
+  margin-bottom: 5%;
+}
+
+.lead.mb-07{
+  font-size: 15px;
+}
+
   </style>
 
 
@@ -220,7 +256,7 @@ h5{
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand">Hinge Brief</a>
-      <a class="btn btn-primary" href="https://mysiteez.com/">Return To Eric Zoleski</a>
+      <a class="btn btn-primary" href="https://mysiteez.com/">Return To Eric's Portfolio</a>
     </div>
   </nav>
 
@@ -383,18 +419,32 @@ h5{
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-7">6 Degrees Of Separation: Kevin Bacon</h2>
+            <!-- Image Showcases -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters2">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/collegestudents.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2 class="bacon">Kevin Bacon, Hinge’s Spokesperson</h2>
+          <p class="lead mb-07">Almost 60% of millennials said their favorite way <br> to meet new romantic partners is
+            through friends, groups or shared interests. Looking to build a meaningful relationship, millennials are
+            apprehensive of meeting up with total strangers.
+            <br>
+            <br>
+            Seeing that this popular game and Hinge are both based on the premise of 
+            “common connections” we felt Kevin Bacon would be the perfect spokesperson 
+            and mutual friend to help singles connect with each other.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
+      
           </form>
         </div>
       </div>
@@ -406,43 +456,8 @@ h5{
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
+   
+            <a class="btn btn-primary" href="https://mysiteez.com/">Return To Eric's Portfolio</a>
         </div>
       </div>
     </div>
