I made link changes

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@ footer.footer {
 .font-weight-light.mb-0{
   color:#000000;
   font-weight:100 !important;
+  font-size: 20px;
+  line-height: 22px;
 }
 
 p.lead.mb-02{
@@ -256,7 +258,7 @@ width: 100%;
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand">Hinge Brief</a>
-      <a class="btn btn-primary" href="https://mysiteez.com/">Return To Eric's Portfolio</a>
+      <a class="btn btn-primary" href="https://mysiteez.com/portfolio/portfolio/">Return To Eric's Portfolio</a>
     </div>
   </nav>
 
@@ -457,7 +459,7 @@ width: 100%;
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
    
-            <a class="btn btn-primary" href="https://mysiteez.com/">Return To Eric's Portfolio</a>
+            <a class="btn btn-primary" href="https://mysiteez.com/portfolio/portfolio/">Return To Eric's Portfolio</a>
         </div>
       </div>
     </div>
