--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ width: 100%;
     <div class="container-fluid p-0">
       <div class="row no-gutters2">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/collegestudents.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/kevinbaconhinge.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2 class="bacon">Kevin Bacon, Hinge’s Spokesperson</h2>
           <p class="lead mb-07">Almost 60% of millennials said their favorite way <br> to meet new romantic partners is
