--- a/index.html
+++ b/index.html
@@ -158,13 +158,12 @@ header.masthead h1 {
 }
 
 .hinge{
-  height: auto;
-  margin-top: 7%;
-  margin-bottom: 7%;
-  margin-left: 33%;
-  top: 0;
-  left: 0;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
     background-repeat: none !important;
+    padding: 50px;
 }
 .col-lg-4{
   max-width: 25% !important;
