I updated information as well as files:

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Hinge Brief</title>
+  <title>| Hinge Brief</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -246,6 +246,20 @@ width: 100%;
 
 .lead.mb-07{
   font-size: 15px;
+  width: 300px;
+}
+
+.kevinbacon{
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.newtestimonials{
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
   </style>
@@ -299,9 +313,7 @@ width: 100%;
             <p class="lead mb-01">Hinge is not a hookup dating app. Plain and simple. No ghosting, no corny pickup
               lines, no swiping. It’s a place where people (especially millennials) can feel confident that they’re
               going to meet somebody worth their time. Instead of random strangers, you only match with people who you
-              have mutual Facebook friends with. Making people more accountable for what they say and do. Users can
-              comment on specific bio briefs of the other person to initiate conversations, creating a more intimate
-              user experience. </p>
+              have mutual Facebook friends with. Making people more accountable for what they say and do. </p>
               <br>
               <br>
               <img class="chart" src="./img/backgroundtab.jpg" alt="chart" width="300px" height="300px">
@@ -351,9 +363,12 @@ width: 100%;
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/collegestudents.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Insight</h2>
-          <p class="lead mb-02">Almost 60% of millennials said their favorite way <br> to meet new romantic partners is
-            through friends, groups or shared interests. Looking to build a meaningful relationship, millennials are
-            apprehensive of meeting up with total strangers.</p>
+          <p class="lead mb-02">Looking to build a meaningful relationship, millennials are
+            apprehensive of meeting up with total strangers. Though millennials are not afraid to
+             meet up with total strangers, 62% said they still prefer to go out with someone they 
+             are somewhat familiar with. The source of this apprehension, trust. How can you go 
+             out on a date if you can’t have the full confidence that your date isn’t someone 
+             who they say they are?</p>
         </div>
       </div>
       <div class="row no-gutters">
@@ -381,35 +396,15 @@ width: 100%;
       <h2 class="mb-5">Choosing from 4-5 of your closest friends, 
         you’re able you able to refine your search from your trusted friends 
         and the mutual friendships you share.</h2>
+        <p class="font-weight-light mb-0">The “Friend Testimonial” feature allows users to ask <br>
+          their closest friends what they think of their mutual connection before matching. <br>
+          Users can create a customized attribute list to then request their closest friends <br>
+          to place check marks next to the attributes that they think their mutual friend fulfills.<br> </p>
+          <br>
+          <br>
       <div class="row">
         <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! It's so easy to connect with my friends!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"I've only been using hinge for a week and I've already met new people!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-4.jpg" alt="">
-              <h5>Jeremy K.</h5>
-              <p class="font-weight-light mb-0">"Hinge Makes It easy to find people you know and need to find!"</p>
-            </div>
-          </div>
+            <img class="newtestimonials" src="img/newtestimonals.png" width="1150px" height="700px" alt="">
       </div>
     </div>
   </section>
@@ -420,23 +415,18 @@ width: 100%;
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-7">6 Degrees Of Separation: Kevin Bacon</h2>
+          <h2 class="mb-7">Take It From Them: Emily Blunt and John Krasinski, Hinge’s Spokespeople</h2>
             <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters2">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/kevinbaconhinge.jpg');"></div>
+          <img class="kevinbacon" src="img/kevinbaconhinge.jpeg" width="200px" height="300px" alt="">
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2 class="bacon">Kevin Bacon, Hinge’s Spokesperson</h2>
-          <p class="lead mb-07">Almost 60% of millennials said their favorite way <br> to meet new romantic partners is
-            through friends, groups or shared interests. Looking to build a meaningful relationship, millennials are
-            apprehensive of meeting up with total strangers.
-            <br>
-            <br>
-            Seeing that this popular game and Hinge are both based on the premise of 
-            “common connections” we felt Kevin Bacon would be the perfect spokesperson 
-            and mutual friend to help singles connect with each other.
+          <p class="lead mb-07">Even Hollywood stars like John Krasinski and Emily Blunt needed a little 
+            push from a mutual friend (Anne Hathaway) to meet up. Seeing that both of these stars are 
+            well liked from millennials (John starred in the widely popular ‘The office, Emily starred 
+            in ‘Devil Wears Prada’) we felt that they would be the perfect spokespeople to share their 
+            story and help singles connect with each other. 
           </p>
         </div>
       </div>
